apps/ntfy/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/component: ntfy
    pod-security.kubernetes.io/enforce: restricted
