apps/ntfy/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/component: ntfy
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/component: ntfy-pod
  ports:
    - name: http-ntfy-out
      appProtocol: kubernetes.io/ws
      protocol: TCP
      port: 8093
      targetPort: http-ntfy
